# spacey

./: .appveyor.yml  .doxygen.txt  .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp
cmake/: CountinousIntegration.cmake  Utilities.cmake
cmake/Hunter/: config.cmake
common/: CMakeLists.txt
common/include/: FloatingPointUtils.hpp
common/src/: null.cpp
common/test/: null.cpp  null_test.cpp
include/: consumer.h  producer.h
neat/: CMakeLists.txt
neat/include/: consumer.hpp
neat/src/: Activation.hpp  Net.cpp  Net.hpp  NetActivation.hpp  NetInput.hpp  NetInputNeuron.cpp  NetInputNeuron.hpp  NetUtils.hpp  Neuron.cpp  Neuron.hpp  NeuronInput.hpp  Node.cpp  Node.hpp  Response.hpp  Weight.hpp  WeightedActivation.hpp  null.cpp
neat/test/: ForwardPropagationTest.cpp  NetTest.cpp  NeuronTest.cpp  NodeTest.cpp  test_producer.cpp
src/: main.cpp
test/: test_producer.cpp
